# plasmid-kit

./: .gitattributes  .gitignore  README.md  pyproject.toml
plasmidkit/: __init__.py  api.py  cli.py
plasmidkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
plasmidkit/annotate/: __init__.py  loader.py
plasmidkit/annotate/detectors/: __init__.py  marker.py  mcs.py  orf.py  orf_prodigal.py  ori.py  promoter.py  terminator.py  utils.py
plasmidkit/cache/: manager.py
plasmidkit/data/: engineered_core_signatures.json
plasmidkit/scoring/: rules.py
tests/: test_api.py
tests/data/: RF0G-IodoY-annotations.csv  RF0G-IodoY.fasta  example.fasta  pSC101-annotations.csv  pSC101.fasta  pUC19-annotations.csv  pUC19.fasta
